# cookbook

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  REQUIREMENTS.md  main.py  pyproject.toml  pyrightconfig.json  start.sh  stop.sh  verify_architecture.py
.githooks/: pre-commit
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/core/: auth.py  bus.py  config.py  reply.py
app/routes/: auth.py  media.py  pages.py  system.py
app/schemas/: event.py
app/services/storage/: db.py
app/utils/: feishu.py  image.py
cookbook/: fanfou_api.py  feishu_bot.py  feishu_ws_manager.py  hello.py  main.py
fanfou_sdk/: README.md  fanfou.py  oauth.py
fanshu/: database.py  fanfou_api.py  feishu_bot.py  feishu_utils.py  feishu_ws_manager.py  feishu_wsm.py  image_utils.py  main.py
tests/: conftest.py  test_auth_callback.py  test_auth_service.py  test_bluesky_client.py  test_db.py  test_fanfou_client.py  test_feishu_client.py  test_integration.py  test_mastodon_client.py  test_pages.py  test_reply_service.py  test_schemas.py  test_system_routes.py  test_threads_client.py  test_utils.py
