[project]
name = "cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fanfou-sdk>=0.0.3",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "lark-oapi>=1.4.18",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "requests==2.31.0",
    "uvicorn>=0.34.3",
]
