[project]
name = "cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "gunicorn>=23.0.0",
    # Configuration & Logging
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Platform SDKs
    "lark-oapi>=1.4.18",
    "aiogram>=3.0.0",
    # Database
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    # Image Processing (existing)
    "pillow>=11.3.0",
    "aiohttp-socks>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
